# hw03

./: CMakeLists.txt  dscrimie dscrimie thinkpadt14gen5.txt  generate_files.c  instructions-gpt  run_hw02.sh
openssl-3.3.1/: Makefile.in  builddata.pm  configdata.pm  installdata.pm  libcrypto.pc  libssl.pc  libssl.so.3  openssl.pc  pod2htmd.tmp
openssl-3.3.1/apps/: openssl
openssl-3.3.1/crypto/: buildinf.h
openssl-3.3.1/doc/html/man7/: provider-rand.html
openssl-3.3.1/doc/man/man1/: CA.pl.1  openssl-asn1parse.1  openssl-ca.1  openssl-ciphers.1  openssl-cmds.1  openssl-cmp.1  (+54 more)
openssl-3.3.1/exporters/: libcrypto.pc
openssl-3.3.1/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  decoder-test  dtlsclient-test  dtlsserver-test  server-test  smime-test  x509-test
openssl-3.3.1/test/: aborttest  aesgcmtest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_stable_parse_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_addr_test  bio_callback_test  bio_core_test  bio_dgram_test  bio_enc_test  bio_memleak_test  bio_meth_test  bio_prefix_text  bio_readbuffer_test  bio_tfo_test  bioprinttest  bntest  build_wincrypt_test  buildtest_c_aes  buildtest_c_async  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cmp_util  buildtest_c_comp  buildtest_c_conf_api  buildtest_c_conftypes  buildtest_c_core  buildtest_c_core_dispatch  buildtest_c_core_object  (+152 more)
openssl-3.3.1/util/: wrap.pl
(+793 files in other folders)
